packages/typ/tests/fixtures/diagnostics/0982_mli_binary_type_underapplied_06.mli.expected
File "0982_mli_binary_type_underapplied_06.mli", line 1:
Warning 24 [bad-module-name]: bad source file name: 0982_mli_binary_type_underapplied_06 is not a valid module name.

File "0982_mli_binary_type_underapplied_06.mli", line 2, characters 13-26:
2 | val x_zeta : int pair_zeta
                 ^^^^^^^^^^^^^
Error: The type constructor pair_zeta expects 2 argument(s),
       but is here applied to 1 argument(s)
